objects/copado__Quality_Gate__c.object
<CustomObject>
    <fields>
        <fullName>copado__Automation_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Group of steps to be executed in the future.</inlineHelpText>
        <label>Automation Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Deployment__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Automation_Template</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Automations</relationshipLabel>
        <relationshipName>Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Rule_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If &apos;Compliance Check&apos; is selected as the type, what Compliance Rule Group should be run?</description>
        <inlineHelpText>If &apos;Compliance Check&apos; is selected as the type, what Compliance Rule Group should be run?</inlineHelpText>
        <label>Compliance Rule Group</label>
        <referenceTo>copado__Compliance_Rule_Group__c</referenceTo>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Connection_Behavior__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>What Connection Behavior is this Quality Gate attached to?</description>
        <inlineHelpText>What Connection Behavior is this Quality Gate attached to?</inlineHelpText>
        <label>Parent Connection Behavior</label>
        <referenceTo>copado__Connection_Behavior__c</referenceTo>
        <relationshipName>Quality_Gates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__DataJSON__c</fullName>
        <description>If &apos;URL Callout&apos; is selected as the type, this stores the details of that callout.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If &apos;URL Callout&apos; is selected as the type, this stores the details of that callout.</inlineHelpText>
        <label>DataJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Execution_Event__c</fullName>
        <inlineHelpText>The event that triggers this automation.</inlineHelpText>
        <label>Execution Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment</fullName>
                    <default>true</default>
                    <label>Deployment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Execution_Sequence__c</fullName>
        <inlineHelpText>Defines if the automation should be executed before or after the event.</inlineHelpText>
        <label>Execution Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                    <default>true</default>
                    <label>Before</label>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Manual_Task_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If &apos;Manual Approval&apos;, &apos;Manual Test&apos;, or &apos;Pull Request&apos; is selected as the type, who should this task be assigned to?</description>
        <inlineHelpText>If &apos;Manual Approval&apos;, &apos;Manual Test&apos;, or &apos;Pull Request&apos; is selected as the type, who should this task be assigned to?</inlineHelpText>
        <label>Manual Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What metadata will trigger this Quality Gate to run? Quality Gates will only run on deployments where the metadata matches that the metadata in this group</description>
        <inlineHelpText>Automations and Quality Gates will be executed when the metadata deployed or committed matches the one specified here.</inlineHelpText>
        <label>Metadata Group</label>
        <referenceTo>copado__Metadata_Group__c</referenceTo>
        <relationshipLabel>Automations</relationshipLabel>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Score_Threshold__c</fullName>
        <description>If &apos;Static Code Analysis&apos; is selected as the type, what static analysis score should be considered passing?</description>
        <inlineHelpText>If &apos;Static Code Analysis&apos; is selected as the type, what static analysis score should be considered passing?</inlineHelpText>
        <label>Static Analysis Score Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If &apos;Selenium Test&apos; is selected as the type, what Selenium Test Group should be run?</description>
        <inlineHelpText>If &apos;Selenium Test&apos; is selected as the type, what Selenium Test Group should be run?</inlineHelpText>
        <label>Selenium Test Group</label>
        <referenceTo>copado__Selenium_Test_Group__c</referenceTo>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Static_Code_Analysis_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If &apos;Static Code Analysis&apos; is selected as the type, which static analysis settings should be used?</description>
        <inlineHelpText>If &apos;Static Code Analysis&apos; is selected as the type, which static analysis settings should be used?</inlineHelpText>
        <label>Static Code Analysis Settings</label>
        <referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Test_Level__c</fullName>
        <description>If &apos;Apex Test with Validation&apos; is selected as the type, what test level should be performed. &apos;Run Specified Tests&apos; will run whatever tests are included on the user stories being deployed</description>
        <inlineHelpText>If &apos;Apex Test with Validation&apos; is selected as the type, what test level should be performed. &apos;Run Specified Tests&apos; will run whatever tests are included on the user stories being deployed</inlineHelpText>
        <label>Apex Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Test_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test</label>
        <referenceTo>copado__Test__c</referenceTo>
        <relationshipLabel>Automations</relationshipLabel>
        <relationshipName>Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <description>What type of verification will be performed for this quality gate</description>
        <inlineHelpText>What type of verification will be performed for this quality gate</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Quality_Gate_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Automation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Automation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>